WIP: custom runner
Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
     #     path: test-app/test-app
 
   test:
-    runs-on: ubuntu-24.04-arm
+    runs-on: oracle-16cpu-64gb-arm64
     name: Test
     needs: build
     strategy:
